...
    final allPlayersAsync = ref.watch(allPlayersProvider);
    final authState = ref.watch(authControllerProvider);
    final isAdmin = authState.user?.isAdmin ?? false;

    return Scaffold(
      appBar: AppBar(
        title: const Text('DATABASE PEMAIN eFOOTBALL'),
        centerTitle: true,
        actions: [
          if (isAdmin)
            IconButton(
              tooltip: 'Tambah Pemain Baru',
              icon: const Icon(Icons.person_add, color: AppColors.accentGold),
...
